--- a/app/views/docs/show.html.haml
+++ b/app/views/docs/show.html.haml
@@ -1,2 +1,6 @@
 %h1= @doc.title
 %p= @doc.content
+
+= link_to "All Docs", docs_path
+= link_to "fix Doc", edit_doc_path(@doc)
+= link_tp "trash it", doc_path(@doc), method: :delete, data: { confirm: "are you sure?"}
