Association between User and Docs

--- a/app/views/docs/show.html.haml
+++ b/app/views/docs/show.html.haml
@@ -3,4 +3,4 @@
 
 = link_to "All Docs", docs_path
 = link_to "fix Doc", edit_doc_path(@doc)
-= link_tp "trash it", doc_path(@doc), method: :delete, data: { confirm: "are you sure?"}
+= link_to "trash it", doc_path(@doc), method: :delete, data: { confirm: "are you sure?"}
