Add styling to welcome and application.html.haml file

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,18 @@
-%h1 place holder
+#banner
+  .banner_content
+    %h1 File Cabinet
+    %p Work Smarter not harder.
+    %button= link_to "Enter", new_user_registration_path
+
+#callouts
+  .callout_inner
+    .wrapper
+      .callout
+        %h2 Organize
+        %p Informative information here!
+
+#bottom_cta
+  .wrapper
+    %h2 Go Ahead
+    %br
+    %button= link_to "Join Now", new_user_registration_path
