--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,17 +2,13 @@
   .banner_content
     %h1 File Cabinet
     %p Work Smarter not harder.
-    %button= link_to "Enter", new_user_registration_path
 
-#callouts
+#callout
   .callout_inner
     .wrapper
       .callout
         %h2 Organize
-        %p Informative information here!
-
-#bottom_cta
-  .wrapper
-    %h2 Go Ahead
-    %br
-    %button= link_to "Join Now", new_user_registration_path
+        %p A file storage system, designed to help you share documents with yourself
+        no matter who you are! no matter where you are!
+        see the top right of the page,
+        to sign in
