fixed index issue

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -10,5 +10,4 @@
         %h2 Organize
         %p A file storage system, designed to help you share documents with yourself
         no matter who you are! no matter where you are!
-        see the top right of the page,
-        to sign in
+        see the top right of the page, to sign in
